--- a/src/components/ui/Sidebar.module.css
+++ b/src/components/ui/Sidebar.module.css
@@ -3,6 +3,7 @@
   min-width: 500px;
   background-color: #F8FBF9;
   border-right: 0.5px solid #ddd;
+  height: 100%;
   min-height: 100vh;
 }
 
